--- a/RGL_ALGO.ipynb
+++ b/RGL_ALGO.ipynb
@@ -130,6 +130,9 @@
     "num_features = X.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
     "cat_features = X.select_dtypes(include=[\"object\", \"category\"]).columns.tolist()\n",
     "\n",
+    "# Conversion des colonnes numériques en float64\n",
+    "X[num_features] = X[num_features].astype(\"float64\")\n",
+    "\n",
     "#Encoder et Gérer les données Nan \n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers= [\n",
@@ -182,7 +185,7 @@
     "    mlflow.sklearn.log_model(\n",
     "        sk_model= pipeline_fr, \n",
     "        input_example=X_val, \n",
-    "        artifact_path=artifact_path\n",
+    "        name=artifact_path\n",
     "    ) \n",
     "\n",
     "    print(\"✅ Modèle entraîné et logué dans MLflow avec succès.\")\n",
