--- a/TREE_ALGO.ipynb
+++ b/TREE_ALGO.ipynb
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Connecxion au serveur MLFlow\n",
+    "## Connection au serveur MLFlow\n",
     "client= MlflowClient(tracking_uri=\"http://127.0.0.1:8080\")\n",
     "## Configuration \n",
     "mlflow.set_tracking_uri(\"http://127.0.0.1:8080\")\n"
@@ -138,7 +138,7 @@
    "id": "d50e744e",
    "metadata": {},
    "source": [
-    "## Décision tree model"
+    "## TREE_Model"
    ]
   },
   {
@@ -151,7 +151,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/10/19 16:54:02 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
       "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
@@ -179,7 +178,7 @@
       " [[4972  100]\n",
       " [ 410 1035]]\n",
       "📊 Métriques : {'accuracy': 0.921743133343563, 'precision': 0.9118942731277533, 'recall': 0.7162629757785467, 'f1': 0.8023255813953488}\n",
-      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/94de67fef43d490cae55569de39b17c3\n",
+      "🏃 View run TREE_Run at: http://127.0.0.1:8080/#/experiments/606383372813198707/runs/a96f7d8998d14182849e50e948dedf88\n",
       "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/606383372813198707\n"
      ]
     }
@@ -196,6 +195,10 @@
     "# Colonne numérique et colonne catégorielle \n",
     "num_features = X.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
     "cat_features = X.select_dtypes(include=[\"object\", \"category\"]).columns.tolist()\n",
+    "\n",
+    "# Conversion des colonnes numériques en float64\n",
+    "#X[num_features] = X[num_features].astype(\"float64\")\n",
+    "\n",
     "\n",
     "#Encoder et Gérer les données Nan \n",
     "preprocessor = ColumnTransformer(\n",
@@ -255,7 +258,7 @@
     "    mlflow.sklearn.log_model(\n",
     "        sk_model= pipeline_fr, \n",
     "        input_example=X_val, \n",
-    "        artifact_path= artifact_path\n",
+    "        name = artifact_path\n",
     "    ) \n",
     "\n",
     "    print(\"✅ Modèle entraîné et logué dans MLflow avec succès.\")\n",
@@ -318,14 +321,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run ID : 94de67fef43d490cae55569de39b17c3\n",
-      "Artefacts : mlflow-artifacts:/606383372813198707/94de67fef43d490cae55569de39b17c3/artifacts\n",
+      "Run ID : a96f7d8998d14182849e50e948dedf88\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/a96f7d8998d14182849e50e948dedf88/artifacts\n",
+      "Run ID : 9eb4e0e4c0614bb7b44332ac3c286bdc\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/9eb4e0e4c0614bb7b44332ac3c286bdc/artifacts\n",
+      "Run ID : d08d123bde804594aa6b871afa33a590\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/d08d123bde804594aa6b871afa33a590/artifacts\n",
+      "Run ID : 613b30c2963644408b06b8170d1f3477\n",
+      "Artefacts : mlflow-artifacts:/606383372813198707/613b30c2963644408b06b8170d1f3477/artifacts\n",
       "Run ID : 401b7b68908840948320077326fc2bef\n",
       "Artefacts : mlflow-artifacts:/606383372813198707/401b7b68908840948320077326fc2bef/artifacts\n",
-      "Run ID : f55fcd44eb874d41a9bc1a8bccdddcdc\n",
-      "Artefacts : mlflow-artifacts:/606383372813198707/f55fcd44eb874d41a9bc1a8bccdddcdc/artifacts\n",
-      "Run ID : 990f13fdba71400f8bc519d45326c5c4\n",
-      "Artefacts : mlflow-artifacts:/606383372813198707/990f13fdba71400f8bc519d45326c5c4/artifacts\n",
       "Run ID : b7ad840cf8e648bab020b034954d92f4\n",
       "Artefacts : mlflow-artifacts:/606383372813198707/b7ad840cf8e648bab020b034954d92f4/artifacts\n",
       "Run ID : 3b3a105dba904beabd5e18a267368ccc\n",
@@ -354,35 +359,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6edea9fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📦 TREE_artefacts/MLmodel\n",
-      "📦 TREE_artefacts/conda.yaml\n",
-      "📦 TREE_artefacts/input_example.json\n",
-      "📦 TREE_artefacts/model.pkl\n",
-      "📦 TREE_artefacts/python_env.yaml\n",
-      "📦 TREE_artefacts/requirements.txt\n",
-      "📦 TREE_artefacts/serving_input_example.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "from mlflow.tracking import MlflowClient\n",
-    "\n",
-    "artifacts = client.list_artifacts(\"b7ad840cf8e648bab020b034954d92f4\", path=\"TREE_artefacts\")\n",
-    "\n",
-    "for artifact in artifacts:\n",
-    "    print(\"📦\", artifact.path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
    "id": "d9069900",
    "metadata": {},
    "outputs": [
