--- a/RGL_ALGO.ipynb
+++ b/RGL_ALGO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a99b9fd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1e208dca",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1ee6a796",
    "metadata": {},
    "outputs": [],
@@ -58,10 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aa9c2ff4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Experiment: artifact_location='mlflow-artifacts:/952359116459871595', creation_time=1760986536774, experiment_id='952359116459871595', last_update_time=1760986536774, lifecycle_stage='active', name='TREE_Models', tags={'mlflow.experimentKind': 'custom_model_development'}>, <Experiment: artifact_location='file:///C:/Users/j_aka/Desktop/mlops/my_app/mlruns/0', creation_time=1760877394979, experiment_id='0', last_update_time=1760877394979, lifecycle_stage='active', name='Default', tags={}>]\n"
+     ]
+    }
+   ],
    "source": [
     "# Récupération de toutes les expériences MLflow\n",
     "all_experiments = client.search_experiments()\n",
@@ -71,10 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eb7e4ae9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Recherche des expériences Mlflow Spécifique.\n",
     "client.search_experiments(filter_string=\"name = 'RLG_Models'\")"
@@ -90,10 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "add13bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   person_age  person_income person_home_ownership  person_emp_length loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length\n",
+      "0          22          59000                  RENT              123.0    PERSONAL          D      35000          16.02            1                 0.59                         Y                           3\n",
+      "1          21           9600                   OWN                5.0   EDUCATION          B       1000          11.14            0                 0.10                         N                           2\n",
+      "2          25           9600              MORTGAGE                1.0     MEDICAL          C       5500          12.87            1                 0.57                         N                           3\n"
+     ]
+    }
+   ],
    "source": [
     "# Définition du chemin vers le fichier de  données \n",
     "data_dir = r\"C:\\Users\\j_aka\\Desktop\\mlops\\credit_risk_dataset.csv\"\n",
@@ -113,10 +143,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "31d5b588",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/20 21:06:40 INFO mlflow.tracking.fluent: Experiment with name 'RLG_Models' does not exist. Creating a new experiment.\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:473: ConvergenceWarning: lbfgs failed to converge after 3000 iteration(s) (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
+      "\n",
+      "Increase the number of iterations to improve the convergence (max_iter=3000).\n",
+      "You might also want to scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\j_aka\\anaconda3\\envs\\mlops_projet\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Modèle entraîné et logué dans MLflow avec succès.\n",
+      "\n",
+      "Rapport de classification :\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      0.87      0.89      5072\n",
+      "           1       0.61      0.72      0.66      1445\n",
+      "\n",
+      "    accuracy                           0.84      6517\n",
+      "   macro avg       0.76      0.80      0.78      6517\n",
+      "weighted avg       0.85      0.84      0.84      6517\n",
+      "\n",
+      "\n",
+      "Matrice de confusion :\n",
+      " [[4402  670]\n",
+      " [ 398 1047]]\n",
+      "📊 Métriques : {'accuracy': 0.8361209145312261, 'precision': 0.609784507862551, 'recall': 0.7245674740484429, 'f1': 0.6622390891840607}\n",
+      "🏃 View run RLG_Run at: http://127.0.0.1:8080/#/experiments/950721644456652002/runs/7f36a2046e0d47fb8aa9da78c181c24a\n",
+      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/950721644456652002\n"
+     ]
+    }
+   ],
    "source": [
     "# Définition des Features et de la cible \n",
     "target_col = 'loan_status'\n",
